--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
     </div>
     <div class="video" id="video">
         <p>VIDEO</p>
-        <video controls>
-            <source src="images/video.mp4" type="video/mp4">
-        </video>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vp1eKZotbf4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
     <div class="product" id="product">
         <p>NUESTRO PRODUCTO</p>
