--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li onclick="scrollto('video')">VIDEO</li>
             <li onclick="scrollto('product')">NUESTRO PRODUCTO</li>
             <li onclick="scrollto('contact')">CONTACTO</li>
+            <a href="documents/3NABCH.pdf"><li>3NABCH</li></a>
         </ul>
     </nav>
     <div class="main" id="main">
